--- a/style.css
+++ b/style.css
@@ -158,6 +158,83 @@ a{
     text-align: center;
 }
 #pic img{
-    height: 300px;
+    height: 440px;
+    margin-left: 40px;
+    display: inline-flex;
+    width: 400px;
+    margin-right: 40px;
+}
+  .right{
+    float: right;
+    width: 100%;
+    margin-top: 6px;
+    padding: 20px;
+    display: inline;
+    margin-left: 15px;
+  }
+  #flex-content-ed1{
+    display: flex;
+  }
+
+
+/*****************contact csss ***************/
+* {
+    box-sizing: border-box;
+  }
+  
+  /* Style inputs */
+  input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+    border-radius: 2px;
+  }
+  
+  input[type=submit] {
+    background-color: #0417aa;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 3px;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #0d5331;
+    border-radius: 2px;
+  }
+.container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 10px;
+  }
+  
+  /* Create two columns that float next to eachother */
+  .column {
+    float: left;
+    width: 50%;
+    margin-top: 6px;
+    padding: 20px;
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .column, input[type=submit] {
+      width: 100%;
+      margin-top: 0;
+    }
+  }
+.exp-content{
     margin-left: 30px;
+    margin-right: 10px;
 }
