--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     color: #ecdddd;
-    background-color: #83;
+    background-color: #40E0D0;
 }
 @import url('https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner&family=Roboto:ital,wght@0,100;0,300;0,700;1,100;1,300&display=swap');
 
